--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
-    "ant-design-vue": "^1.3.16",
+    "ant-design-vue": "1.6.2",
     "axios": "^0.19.0",
     "core-js": "^2.6.5",
     "js-cookie": "^2.2.0",
